--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,9 @@
 body{
     background-color: beige;
 }
-
+#name{
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
+}
 hr{
    height: 0px;
    border-color: gray;
@@ -37,9 +39,12 @@ h2{
     border-radius: 10px;
     border-style: dashed;
 }
-#profile_image
+.profile_image
 {
     border-radius: 10px;
     border-style: solid;
 
+}
+.shadow{
+    box-shadow: 5px 5px 5px black;
 }
