--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,5 +1,6 @@
 body{
     background-color: beige;
+    margin: 0;
 }
 #name{
     font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
@@ -26,11 +27,10 @@ h2{
 
 #top
 {
-    margin: 0px;
     background-color:rgb(107, 122, 206);
     color: aliceblue;
-    border-radius: 10px;
-    border-style: dashed;
+    border-radius: 0px;
+    border-style: none;
 }
 #bottom
 {
